//  Copyright (c) 2023, WSO2 LLC. (http://www.wso2.org) All Rights Reserved.
//
//  WSO2 LLC. licenses this file to you under the Apache License,
//  Version 2.0 (the "License"); you may not use this file except
//  in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing,
//  software distributed under the License is distributed on an
//  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
//  KIND, either express or implied.  See the License for the
//  specific language governing permissions and limitations
//  under the License.

syntax = "proto3";

package discovery.service.api;

option go_package = "api";
option java_multiple_files = false;
option java_generic_services = true;

// [#protodoc-title: Application]
message ReceivedEvent {
    string type = 1;
    string value = 2;
    string tenantDomain = 3;
    string username = 4;
    string operation = 5;
}

/*
 * This is the response from throttler.
 * Currently it has a boolean flag to check all the tenant over usage is updated or not.
 */
message EventReceivedResponse {

    bool updated = 1;
}

service ReceiveEventService {
   rpc ReceiveEvent (ReceivedEvent) returns (EventReceivedResponse);
}